--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,25 @@
+sudo: false
 language: android
 dist: trusty
 android:
     components:
-        - build-tools-25.0.3
-        - android-29
+        - build-tools-27.0.3
+        - android-$ANDROID_EMULATOR_LEVEL
+        - sys-img-armeabi-v7a-google_apis-$ANDROID_EMULATOR_LEVEL
 before_install: 
     - chmod +x gradlew
 before_script:
     - mkdir "$ANDROID_HOME/licenses" || true
     - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"    
+    - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
+    - emulator -avd test -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &  
+env:
+  global:
+    - ANDROID_API_LEVEL=27
+    - ANDROID_EMULATOR_LEVEL=21
+    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+    - ADB_INSTALL_TIMEOUT=20
