--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,47 @@
-sudo: false
 language: android
-dist: trusty
 android:
-    components:
-        - build-tools-27.0.3
-        - android-$ANDROID_EMULATOR_LEVEL
-        - sys-img-armeabi-v7a-google_apis-$ANDROID_EMULATOR_LEVEL
-before_install: 
-    - chmod +x gradlew
-before_script:
-    - mkdir "$ANDROID_HOME/licenses" || true
-    - echo "24333f8a63b6825ea9c5514f83c2829b004d1fee" > "$ANDROID_HOME/licenses/android-sdk-license"    
-    - echo no | android create avd --force -n test -t "android-"$ANDROID_EMULATOR_LEVEL --abi $ANDROID_ABI --tag $ANDROID_TAG
-    - emulator -avd test -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &  
+    components
+        - build-tools-28.0.3
+        - android-28
+        - android-21
+        - add-on
+        - extra
+        - platform-tools
+        - tools
+        - extra-google-googleplayservices
+        - extra-google-m2repository
+        - extra-android-m2repository
+        - addon-google_apis-google-28
+        - sys-img-armeabi-v7a-android-21
+        
+before_install:
+    - yes | sdkmanager "platforms;android-28"
+
+deploy:
+    provider: releases
+    apikey: $GITHUB_KEY
+    file: app/build/outputs/apk/release/app-release.apk
+    skip_cleanup: true
+    on:
+        tags: true
+
+script: ./gradlew :app:build
+
+notifications:
+    email:
+        recipients:
+        - hemcraft@gmail.com
+        on_success: always
+        on_failure: always
+        
 env:
-  global:
-    - ANDROID_API_LEVEL=27
-    - ANDROID_EMULATOR_LEVEL=21
-    - ANDROID_BUILD_TOOLS_VERSION=27.0.3
-    - ANDROID_ABI=armeabi-v7a
-    - ANDROID_TAG=google_apis
-    - ADB_INSTALL_TIMEOUT=20
+    global:
+        -MALLOC_ARENA_MAX=2
+        
+sudo: required
+
+before-script:
+    - echo no | android create avd --force -n test -t android-21--abi armeabi-v7a-s "768x1280"
+    - emulator -avd test -no-audio -no-window &
+    - adb wait-for-device
+    - adb shell input keyevent 82 &
