--- a/.travis.yml
+++ b/.travis.yml
@@ -1,47 +1,37 @@
 language: android
-android:
-    components
-        - build-tools-28.0.3
-        - android-28
-        - android-21
-        - add-on
-        - extra
-        - platform-tools
-        - tools
-        - extra-google-googleplayservices
-        - extra-google-m2repository
-        - extra-android-m2repository
-        - addon-google_apis-google-28
-        - sys-img-armeabi-v7a-android-21
-        
-before_install:
-    - yes | sdkmanager "platforms;android-28"
+jdk: oraclejdk8
 
-deploy:
-    provider: releases
-    apikey: $GITHUB_KEY
-    file: app/build/outputs/apk/release/app-release.apk
-    skip_cleanup: true
-    on:
-        tags: true
-
-script: ./gradlew :app:build
-
-notifications:
-    email:
-        recipients:
-        - hemcraft@gmail.com
-        on_success: always
-        on_failure: always
-        
 env:
-    global:
-        -MALLOC_ARENA_MAX=2
-        
-sudo: required
+ global:
+    - ANDROID_API_LEVEL=29
+    - ANDROID_BUILD_TOOLS_VERSION=29.0.2
+    
+android:
+ components:
+    - tools
+    - platform-tools
+    # The BuildTools version used by your project
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
+    # The SDK version used to compile your project
+    - android-$ANDROID_API_LEVEL
+    # Additional components
+    - extra-google-google_play_services
+    - extra-google-m2repository
+    - extra-android-m2repository
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+    
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 before-script:
+    - mkdir -p "$ANDROID_HOME/licenses"
+    - cp ./google-licenses/* "$ANDROID_HOME/licenses/"
     - echo no | android create avd --force -n test -t android-21--abi armeabi-v7a-s "768x1280"
     - emulator -avd test -no-audio -no-window &
     - adb wait-for-device
     - adb shell input keyevent 82 &
+    
+script:
+    - ./gradlew build check
