--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
+    - sys-img-armeabi-v7a-google_apis-25
     
 licenses:
     - 'android-sdk-preview-license-.+'
@@ -27,9 +28,9 @@ licenses:
 
 before-script:
     - mkdir -p "$ANDROID_HOME/licenses"
-    - echo no | android create avd --force -n test -t android-21--abi armeabi-v7a-s "768x1280"
+    - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
     - emulator -avd test -no-audio -no-window &
-    - adb wait-for-device
+    - android-wait-for-emulator
     - adb shell input keyevent 82 &
     
 script:
