--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,5 @@ licenses:
 before-script:
     - mkdir -p "$ANDROID_HOME/licenses"
    
-
-
-script:
- - chmod +x ./gradlew build connectedCheck
+before_install:
+ - chmod +x gradlew
