--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+    - yes | sdkmanager --licenses
 
 before-script:
     - mkdir -p "$ANDROID_HOME/licenses"
