--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-google_apis-25
+    - sys-img-armeabi-v7a-android-21
     
 licenses:
     - 'android-sdk-preview-license-.+'
@@ -28,6 +29,15 @@ licenses:
 
 before-script:
     - mkdir -p "$ANDROID_HOME/licenses"
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - android-wait-for-emulator
+    - adb shell input keyevent 82 &
    
 before_install:
  - chmod +x gradlew
+ 
+
+script:
+  - android list target
+  - ./gradlew connectedAndroidTest
