--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
     - sys-img-armeabi-v7a-google_apis-25
-    - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-29
     
 licenses:
     - 'android-sdk-preview-license-.+'
@@ -29,7 +29,7 @@ licenses:
 
 before-script:
     - mkdir -p "$ANDROID_HOME/licenses"
-    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+    - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
@@ -39,5 +39,5 @@ before_install:
  
 
 script:
-  - android list target
+  - android list targets
   - ./gradlew connectedAndroidTest
