--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ jdk: oraclejdk8
 env:
  global:
     - ANDROID_API_LEVEL=29
-    - ANDROID_BUILD_TOOLS_VERSION=29.0.3
+    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - MALLOC_ARENA_MAX=2
     
 android:
  components:
@@ -19,23 +20,25 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-google_apis-25
     - sys-img-armeabi-v7a-android-29
     
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
+    
+sudo: required
 
 before-script:
     - mkdir -p "$ANDROID_HOME/licenses"
-    - echo no | android create avd --force -n test -t android-29 --abi armeabi-v7a
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
+    - adb wait-for-device
     - adb shell input keyevent 82 &
    
 before_install:
  - chmod +x gradlew
+ - yes | sdkmanager "platforms;android-29"
  
 
 script:
