--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ android:
     - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     # The SDK version used to compile your project
     - android-$ANDROID_API_LEVEL
+    - android-21
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
@@ -36,7 +37,7 @@ before-script:
     - adb wait-for-device
     - adb shell input keyevent 82 &
    
-before_install:
+before-install:
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-29"
  
