--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ jdk: oraclejdk8
 env:
  global:
     - ANDROID_API_LEVEL=29
-    - ANDROID_BUILD_TOOLS_VERSION=28.0.3
+    - ANDROID_BUILD_TOOLS_VERSION=29.0.3
     - MALLOC_ARENA_MAX=2
     
 android:
@@ -21,7 +21,7 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
-    - sys-img-armeabi-v7a-android-29
+    - sys-img-armeabi-v7a-android-21
     
 licenses:
     - 'android-sdk-preview-license-.+'
@@ -40,6 +40,7 @@ before-script:
 before-install:
  - chmod +x gradlew
  - yes | sdkmanager "platforms;android-29"
+ - yes | sdkmanager "build-tools;29.0.3"
  
 
 script:
