--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:name="com.orm.SugarApp">
             <meta-data android:name="DATABASE" android:value="city.db" />
-            <activity android:name=".AboutActivity"
-                android:exported="true"></activity>
+            <activity
+                android:name=".AboutActivity"
+                android:exported="true"
+                android:theme="@style/AppTheme.NoActionBar" />
             <activity
                 android:name=".CitiesActivity"
                 android:label="@string/title_activity_cities"
